Added Installation Instruction
Added a comment into the Output Display Object in order to show how to correctly set the directory to read puzzle text files from for marking purposes

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -163,7 +163,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 
 [RootWindow]
 ScreenPosition=X=124.000 Y=72.000
@@ -1038,15 +1039,15 @@ StaticMeshEditor.TimeStamp=2022.05.04-23.54.07
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem1=/Game/Audio/SwitchButtonSounds/switch38
-MRUItem2=/Game/Audio/Beep_Buttons/Btn
-MRUItem3=/Game/ParticleFX/Textures/M_Spray
-MRUItem4=/Game/ParticleFX/spraySystem
-MRUItem5=/Game/ParticleFX/spraySystemBP
-MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem7=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem2=/Game/Audio/SwitchButtonSounds/switch38
+MRUItem3=/Game/Audio/Beep_Buttons/Btn
+MRUItem4=/Game/ParticleFX/Textures/M_Spray
+MRUItem5=/Game/ParticleFX/spraySystem
+MRUItem6=/Game/ParticleFX/spraySystemBP
+MRUItem7=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem8=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
 MRUItem9=/Game/PuzzleBP/Blueprints/Cube
 MRUItem10=/Game/PuzzleBP/Blueprints/BoxChecker
 MRUItem11=/Game/PuzzleBP/Blueprints/ALAN
@@ -2928,7 +2929,7 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ControlPanel_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
